# hrai-space-desktop-app

./: README.md
Hrai-Space-win64/: userdata
app/: CMakeLists.txt  Game_Page.cpp  Game_Page.h  Game_Tile.cpp  Game_Tile.h  Library_Page.cpp  Library_Page.h  Login_Popup.cpp  Login_Popup.h  Picture_Widget.cpp  Picture_Widget.h  Popup.cpp  Popup.h  Top_Bar.cpp  Top_Bar.h  main.cpp  main_window.cpp  main_window.h
app/data/: Game.cpp  Game.h  Unzipper.cpp  Unzipper.h  User.cpp  User.h
app/network/: Network_Manager.cpp  Network_Manager.h  Web_Downloader.cpp  Web_Downloader.h  Web_Pixmap.cpp  Web_Pixmap.h
app/resources/: project.rc  resources.qrc  stylesheet.qss
app/ui/: Game_Page.cpp  Game_Page.h  Game_Tile.cpp  Game_Tile.h  Library_Page.cpp  Library_Page.h  Login_Popup.cpp  Login_Popup.h  Main_Window.cpp  Main_Window.h  Picture_Widget.cpp  Picture_Widget.h  Popup.h  Top_Bar.cpp  Top_Bar.h
deploy/: script.iss
unzip/Your Ninja way!/Death In Progress/: file.txt
unzip/toasterball-demo-windows/Toasterball - Windows/Toasterball Demo/Toasterball_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level1  resources.assets  resources.assets.resS  sharedassets0.assets  sharedassets0.assets.resS  sharedassets0.resource  sharedassets1.assets
unzip/toasterball-demo-windows/Toasterball - Windows/Toasterball Demo/Toasterball_Data/Resources/: unity_builtin_extra
